# JR_PyVenom

m1/lesson.01/: main.py  main1.py  main2.py  main3.py
m1/lesson.20/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step08.py  step09.py  step10.py  student_data.json  student_data_1.json
m1/lesson.21/: http_server_1.py  http_server_2.py  step01.py  step02.py  step03.py  step04.py  step05.py
m1/lesson.22:API_and_Async_start/: http_client.py  http_server_2.py  step01.py  step02.py  step03.py  step04.py
m1/lesson.23:Async/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py
m1/lesson.24_Async_2/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py
m1/lesson.25_Async_3/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step08.py  step09.py  step10.py
m1/lesson.26_Git/: .gitignore
m1/lesson.27_Git_2/: README.md
m1/lesson.28_Git_3/: README.md
m1/lesson.29_Project_tg_1/: README.md  main.py
m1/lesson.30_Project_tg_2/: config.py  main.py  tasks.md
m1/lesson.31_Project_tg_3/: main.py  requirements.txt
m1/lesson.32_Project_tg_4/: config.py  main.py
m2/lesson.02/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py
m2/lesson.03/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step10.py  step11.py  step12.py
m2/lesson.04/: lesson.04.ipynb
m2/lesson.05/: index.html
m2/lesson.06/: index.html
m2/lesson.07/: about.html  index.html
m2/lesson.09/: README.md  pyproject.toml  requirements.txt
(+19 files in other folders)
